k8s/network-policies/frontend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"frontend-policy","namespace":"frontend"},"spec":{"egress":[{"ports":[{"port":5000,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"backend"}}}]},{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"kube-system"}}}]}],"ingress":[{}],"podSelector":{"matchLabels":{" [...]
  creationTimestamp: "2026-04-10T13:56:54Z"
  generation: 2
  name: frontend-policy
  namespace: frontend
  resourceVersion: "5152"
  uid: af4bb27b-4ca5-47d0-894f-53d29e035a11
spec:
  egress:
  - ports:
    - port: 5000
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
  ingress:
  - {}
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
